--- a/views/layout.html
+++ b/views/layout.html
@@ -35,8 +35,11 @@
                 <li class="nav-item">
                     <a class="nav-link" id="homeLink" href="{{=URL('default', 'index', vars=dict(public='0'))}}">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" style="margin-right: 2px;">
                     <a class="nav-link" id="jobsLink" href="{{=URL('default', 'index', vars=dict(public='1'))}}">Community</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="aboutLink" href="{{=URL('default', 'about')}}">About</a>
                 </li>
             </ul>
 
