--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -4,14 +4,14 @@ html {box-sizing:border-box;}
 *, *:after, *:before {border:0; margin:0; padding:0; box-sizing:inherit;}
 html, body {max-width: 100vw; overflow-x: hidden}
 
-#editTextJob {
+#edit_job_name_input {
     font-size: 48px;
     font-weight: bold;
     width: 100%;
     padding: 6px 12px 6px 12px;
 }
 
-#jobNameErrorText {
+#job_name_error {
     font-size: 24px;
     font-weight: bold;
     margin-top: 10px;
