Changed public jobs and cleaned up code.

--- a/views/layout.html
+++ b/views/layout.html
@@ -33,10 +33,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" id="homeLink" href="{{=URL('default', 'index', vars=dict(public='0'))}}">Home</a>
+                    <a class="nav-link" id="homeLink" href="{{=URL('default', 'index', vars=dict(public='false'))}}">Home</a>
                 </li>
                 <li class="nav-item" style="margin-right: 2px;">
-                    <a class="nav-link" id="jobsLink" href="{{=URL('default', 'index', vars=dict(public='1'))}}">Community</a>
+                    <a class="nav-link" id="jobsLink" href="{{=URL('default', 'index', vars=dict(public='true'))}}">Community</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="aboutLink" href="{{=URL('default', 'about')}}">About</a>
