--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -4,12 +4,6 @@ html {box-sizing:border-box;}
 *, *:after, *:before {border:0; margin:0; padding:0; box-sizing:inherit;}
 html, body {max-width: 100vw; overflow-x: hidden}
 
-#edit_job_name_input {
-    font-size: 48px;
-    font-weight: bold;
-    width: 100%;
-    padding: 6px 12px 6px 12px;
-}
 
 #job_name_error {
     font-size: 24px;
@@ -313,6 +307,14 @@ input[type=checkbox].checkBox:checked:after {
     padding-right: 20px;
 }
 .deleteJobDetails:hover {
+    opacity: 0.7;
+}
+
+.visibleJobDetails {
+    padding-top: 9px;
+    padding-right: 22px;
+}
+.visibleJobDetails:hover {
     opacity: 0.7;
 }
 
