--- a/views/default/index.html
+++ b/views/default/index.html
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                     
-                    <div style="margin-top: 10px;">
+                    <div v-if="!selected_public" style="margin-top: 10px;">
                         <div class="filterByTags noSelect" data-toggle="collapse" data-target="#filterPersonal">
                             <p class="sideFix"><i id="filterPersonalIcon" class="fa fa-chevron-down"></i>BY PUBLIC JOBS</p>
                         </div>
@@ -196,7 +196,7 @@
                         <div id="filterPersonal" class="collapse noSelect">
                             <div class="cPanel">
                                 <div class="form-check">
-                                    <input v-on:change="changed_public_jobs()" type="checkbox" class="form-check-input checkBox" id="personal" value="personal" v-model="selected_public" onclick="return !isLoadingResults;">
+                                    <input type="checkbox" class="form-check-input checkBox" id="personal" value="personal" v-model="public_jobs" v-on:change="fetch_new_results()" onclick="return !isLoadingResults;">
                                     <label for="personal" class="noBottomMargin">Public jobs</label>
                                 </div>
                             </div>
@@ -213,12 +213,12 @@
             
             <div class="col-sm-8 col-md-9 col-lg-10">
                 <div>
-                    <select v-model="selected_sort" class="form-control" style="width: 200px; max-width: 100%; display: inline; margin: 4px 0px 4px 4px;"
+                    <select v-model="selected_sort" class="form-control" style="width: 200px; max-width: 100%; display: inline; margin: 2px 0px 2px 2px;"
                             v-on:change="fetch_new_results()" onclick="return !isLoadingResults;">
                         <option value="newest">Sort by: Newest jobs</option>
                         <option value="recent">Recently updated</option>
                     </select>
-                    <select v-model="selected_time_range" class="form-control" style="width: 200px; max-width: 100%; display: inline; margin: 4px 4px 4px 4px;"
+                    <select v-model="selected_time_range" class="form-control" style="width: 200px; max-width: 100%; display: inline; margin: 2px;"
                             v-on:change="fetch_new_results()" onclick="return !isLoadingResults;">
                         <option value="any">Added: Any date</option>
                         <option value="day">In the past day</option>
@@ -229,7 +229,7 @@
 
                     <i v-if="isLoadingResults" class="fa fa-spinner fa-spin" style="color: black;"></i>
 
-                    <span class="pull-right hidden-sm" style="margin: 4px;">
+                    <span class="pull-right hidden-sm" style="margin: 2px;">
                         <a href="{{=URL('default', 'create')}}"><button class="createJobButton"><i class="fa fa-plus"></i>&#8203;</button></a>
                     </span>
                 </div>
@@ -252,7 +252,7 @@
                                         <i class="fa fa-trash" v-bind:class="text_color" style="font-size: 32px;" href="#" data-toggle="modal" data-target="#deleteModal"></i> 
                                     </div>
                                     
-                                    <div class="deleteJobDetails pointer pull-right">
+                                    <div class="visibleJobDetails pointer pull-right">
                                         <i id="public_icon" v-bind:class="{ 'textColorBlack': (text_color == 'textColorBlack'), 'textColorWhite': (text_color == 'textColorWhite'), 'fa fa-eye': selected_job.is_public, 'fa fa-eye-slash': !selected_job.is_public }" v-on:click="toggle_public()" style="font-size: 30px;" data-toggle="tooltip" v-bind:title="selected_job.is_public ? 'Click to make this job private.' : 'Click to make this job public.'"></i>
                                     </div>
                                 </div>
@@ -276,7 +276,11 @@
                                             <div>
                                                 <div v-if="!editing_job" class="jobDetailsTextBottomLeft" v-bind:class="text_color">${ selected_job.name }</div>
                                                 
-                                                <textarea v-model="edit_job.name" v-if="editing_job" v-on:keypress="is_job_name" id="edit_job_name_input" class="form-control" maxlength=50></textarea>
+                                                <!--
+                                                    For some reason, I had to resort to an inline style.
+                                                    Adding a class would not show the CSS result.
+                                                -->
+                                                <textarea v-model="edit_job.name" v-if="editing_job" v-on:keypress="is_job_name" id="job_name_input" class="form-control" style="font-size: 48px; font-weight: bold; width: 100%; padding: 6px 12px 6px 12px;" maxlength=50></textarea>
                                                 
                                                 <transition name="slide-fade">
                                                     <div id="job_name_error" v-if="edit_errors.job_name != null" v-bind:class="text_color">${ edit_errors.job_name }</div>
@@ -666,7 +670,7 @@
                     </div>
                 </div>
             
-                <div v-if="!showing_job_details" class="row no-gutters" style="margin-top: 8px;">
+                <div v-if="!showing_job_details" class="row no-gutters" style="margin-top: 4px;">
                     <div v-if="my_username == null && !selected_public && !isLoadingResults" class="messageDiv">
                         <center><span class="messageText">You must be logged in to see your jobs.</span></center>
                     </div>
@@ -675,8 +679,8 @@
                         <center><span class="messageText">Oops! There are no viewable jobs.</span></center>
                     </div>
 
-                    <div class="col-md-6">
-                        <div v-for="job in even_jobs" class="pointer noSelect" style="padding: 4px;">
+                    <div class="col-lg-6">
+                        <div v-for="job in even_jobs" class="pointer noSelect" style="padding: 0px 2px 2px 2px;">
                             <div class="roundedCorners" v-bind:style="{ background: '#' + job.color + '59' }" v-on:click="show_job_details(job)">
                                 <div class="whiteGloss" v-bind:style="{ background: '#' + job.color }">
                                     <img v-if="job.preview_url == ''" v-bind:src="get_model_url(job.model)" class="image64 imageFloatLeft"/>
@@ -693,7 +697,7 @@
                                 </div>
 
                                 <div class="postedBy">
-                                    <div class="postedByText">
+                                    <div class="postedByText oneLine">
                                         Posted by: ${job.created_by}
                                     </div>
                                 </div>
@@ -701,8 +705,8 @@
                         </div>
                     </div>
                     
-                    <div class="col-md-6">
-                        <div v-for="job in odd_jobs" class="pointer noSelect" style="padding: 4px;">
+                    <div class="col-lg-6">
+                        <div v-for="job in odd_jobs" class="pointer noSelect" style="padding: 0px 2px 2px 2px;">
                             <div class="roundedCorners" v-bind:style="{ background: '#' + job.color + '59' }" v-on:click="show_job_details(job)">
                                 <div class="whiteGloss" v-bind:style="{ background: '#' + job.color }">
                                     <img v-if="job.preview_url == ''" v-bind:src="get_model_url(job.model)" class="image64 imageFloatLeft"/>
@@ -755,3 +759,36 @@
 
 <script src="{{=URL('static', 'js/default_index_main.js')}}"></script>
 <script src="{{=URL('static', 'js/icons.js')}}"></script>
+
+
+<script>
+    var homeOrisCommunityClicked = function(getCommunityJobs) {
+        var vue = APP.vue;
+        // selected_public is true when we're showing community jobs.
+        // It is false if we're showing personal jobs.
+        if (!isLoadingResults && (vue.selected_public != getCommunityJobs)) {
+            // Toggle the public variable
+            vue.selected_public = getCommunityJobs;
+            vue.fetch_new_results();
+            
+            $("#jobsLink").toggleClass("active");
+            $("#homeLink").toggleClass("active");
+            
+            // Change the header text
+            $("#header_text").html(getCommunityJobs ? "Community" : "Your Jobs");
+        } else if (!isLoadingResults && (vue.selected_public == getCommunityJobs)) {
+            // Otherwise, the user must want to refresh the results.
+            // So go ahead.
+            vue.fetch_new_results();
+        }
+    }
+    
+    $("#homeLink").click(function(e) {
+        e.preventDefault();
+        homeOrisCommunityClicked(false);
+    });
+    $("#jobsLink").click(function(e) {
+        e.preventDefault();
+        homeOrisCommunityClicked(true);
+    });
+</script>
