--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -4,13 +4,6 @@ html {box-sizing:border-box;}
 *, *:after, *:before {border:0; margin:0; padding:0; box-sizing:inherit;}
 html, body {max-width: 100vw; overflow-x: hidden}
 
-
-#job_name_error {
-    font-size: 24px;
-    font-weight: bold;
-    margin-top: 10px;
-}
-
 /*
     Row and header styles
 */
@@ -269,7 +262,6 @@ input[type=checkbox].checkBox:checked:after {
     font-size: 48px;
     line-height: 72px;
     font-weight: bold;
-    word-break: break-all;
 }
 
 .closeJobDetails {
@@ -311,7 +303,7 @@ input[type=checkbox].checkBox:checked:after {
 }
 
 .visibleJobDetails {
-    padding-top: 9px;
+    padding-top: 8px;
     padding-right: 22px;
 }
 .visibleJobDetails:hover {
@@ -402,6 +394,12 @@ input[type=checkbox].checkBox:checked:after {
 .commentError {
     color: #b70000;
     padding: 5px;
+}
+
+#job_name_error {
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 10px;
 }
 
 .loadMore {
@@ -529,6 +527,10 @@ td.min {
 .padding10TopBottom {
     padding-top: 15px;
     padding-bottom: 15px;
+}
+
+.marginTop10 {
+    margin-top: 10px;
 }
 
 .marginBottom5 {
